[project]
name = "xai-pdf"
version = "0.1.0"
description = "A component library for PDFs"
authors = [{ name = "Eduardo Gonzalez", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xpressai/xai-pdf"
keywords = ["xircuits", "pdf"]

# Xircuits-specific configurations
[tool.xircuits]
#default_example_path = "example.xircuits"
requirements_path = "requirements.txt"